fixed heigh on mobile

--- a/style.css
+++ b/style.css
@@ -10,13 +10,17 @@
 }
 
 
-body {
+html, body {
     background-image: -webkit-linear-gradient(top left, #667eea 0%, #764ba2 100%);
     background-image: -moz-linear-gradient(top left, #667eea 0%, #764ba2 100%);
     background-image: -o-linear-gradient(top left, #667eea 0%, #764ba2 100%);
     background-image: linear-gradient(to bottom right, #667eea 0%, #764ba2 100%);
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 100%;
 
-    height: 100vh;
     color: #fff;
     font-family: 'Quicksand', sans-serif;
     display: flex;
